# dzno1st-tool

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  toolchain-mingw-windows.cmake  vcpkg.json
build-mac/: CMakeCache.txt  Makefile  cmake_install.cmake  main
build-win/: CMakeCache.txt  Makefile  cmake_install.cmake
header/: Open_Cv.h  TDS.h  UI.h  adb.h  golike.h  golikenew.h  instagram.h  loadjob.h
src/: Loadjob.cpp  Open_Cv.cpp  TDS.cpp  UI.cpp  adb.cpp  get_feedback.c  get_feedback.pyx  golike.cpp  golike_new.cpp  instagram.cpp  main  main.cpp  mission.c  mission.pyx  setup.py  test.py
src/main.dSYM/Contents/Resources/DWARF/: main
src/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
